feat(db): Authエンドポイントの調整
