# packages/backend/src/auth/auth.controller.ts
@@ -1,17 +1,12 @@
-import {
-  Body,
-  Controller,
-  Get,
-  Post,
-  Request,
-  UseGuards,
-} from "@nestjs/common";
+import { Body, Controller, Get, Post, UseGuards } from "@nestjs/common";
 import { ApiBearerAuth, ApiOkResponse, ApiTags } from "@nestjs/swagger";
+import { User } from "src/users/user.decorator";
 import { AuthGuard } from "./auth.guard";
 import { AuthService } from "./auth.service";
 import { Public } from "./decorators/public.decorator";
 import { LoginDto } from "./dto/login.dto";
 import { AuthEntity } from "./entities/auth.entity";
+import { UserEntity } from "src/users/entities/user.entity";
 
 @Controller("auth")
 @ApiTags("auth")
@@ -26,9 +21,9 @@ export class AuthController {
   }
 
   @Get("profile")
-  @UseGuards(AuthGuard)
   @ApiBearerAuth()
-  getProfile(@Request() req) {
-    return req.user;
+  @ApiOkResponse({ type: UserEntity })
+  getProfile(@User() user: UserEntity) {
+    return user;
   }
 }
